Fix: Removal of stretch attribute at button list level
Fix: Removal of stretch attribute at button list level

--- a/ch5-button-list/scss/_button-list-default.scss
+++ b/ch5-button-list/scss/_button-list-default.scss
@@ -83,4 +83,6 @@ ch5-button-list {
   width: $ch5-button-list-button-container-width;
   height: $ch5-button-list-button-container-height;
   padding: $ch5-button-list-button-container-padding;
+  min-width: $ch5-button-list-button-container-min-width;
+  min-height: $ch5-button-list-button-container-min-height;
 }
